--- a/pages/learn/caos/02_01_00_elementi_di_calcolo_delle_probabilità.html
+++ b/pages/learn/caos/02_01_00_elementi_di_calcolo_delle_probabilità.html
@@ -132,13 +132,14 @@
             $$P(A \bigcup B) = P(A) + P(B) − P(A \bigcap B)$$
 
             Esempio: un certo negozio accetta pagamenti o con carte di credito VISA o Mastercard.
-
-            22% dei clienti ha Mastercard A
-            58% dei clienti ha VISA. B
-            14% dei clienti ha entrambe. A ∩ B
-
-            Qual è la probabilità che un cliente ha almeno una delle 2 carte?
-            $$P(A) = 0.22, P(B) = 0.58 P(A \bigcup B) = P(A) + P(B) − P(A \bigcap B) = 0.22 + 0.58 − 0.14 = 0.66$$
+          <ul>
+            <li>22% dei clienti ha Mastercard: A</li>
+            <li>58% dei clienti ha VISA: B</li>
+            <li>14% dei clienti ha entrambe: A ∩ B</li>
+          </ul>
+          <p class="mbr-text mbr-fonts-style display-7">
+          Qual è la probabilità che un cliente ha almeno una delle 2 carte?
+          $$P(A) = 0.22, P(B) = 0.58 P(A \bigcup B) = P(A) + P(B) − P(A \bigcap B) = 0.22 + 0.58 − 0.14 = 0.66$$
 
 
           </p>
