--- a/pages/learn/caos/02_01_00_elementi_di_calcolo_delle_probabilità.html
+++ b/pages/learn/caos/02_01_00_elementi_di_calcolo_delle_probabilità.html
@@ -129,7 +129,7 @@
           <p class="mbr-text mbr-fonts-style display-7">
             In generale 2 eventi potrebbero non essere disgiunti.
 
-            $$P(A \bigcup B) = P(A) + P(B) − P(A \bigcap B)$$
+            $$P(A \cup B) = P(A) + P(B) − P(A \cap B)$$
 
             Esempio: un certo negozio accetta pagamenti o con carte di credito VISA o Mastercard.
           <ul>
@@ -139,7 +139,7 @@
           </ul>
           <p class="mbr-text mbr-fonts-style display-7">
           Qual è la probabilità che un cliente ha almeno una delle 2 carte?
-          $$P(A) = 0.22, P(B) = 0.58 P(A \bigcup B) = P(A) + P(B) − P(A \bigcap B) = 0.22 + 0.58 − 0.14 = 0.66$$
+          $$P(A) = 0.22, P(B) = 0.58 P(A \cup B) = P(A) + P(B) − P(A \cap B) = 0.22 + 0.58 − 0.14 = 0.66$$
 
 
           </p>
