--- a/pages/learn/caos/02_01_00_elementi_di_calcolo_delle_probabilità.html
+++ b/pages/learn/caos/02_01_00_elementi_di_calcolo_delle_probabilità.html
@@ -117,8 +117,9 @@
           </ul>
           <p class="mbr-text mbr-fonts-style display-7">
             La frequenza di un evento è data dal caso favorevole all’evento rispetto al numero dei casi possibili.
-            La probabilità è il valore della frequenza dell’evento quando il numero degli esperimenti tende ad infinito
-
+            La probabilità è il valore della frequenza dell’evento quando il numero degli esperimenti tende ad infinito.
+            <br>
+            <br>
             Consideriamo un esperimento con sample space S.
             Supponiamo che ad ogni evento A sia associato un numero chiamato probabilità di A ed indicato con P(A), che soddisfa le seguenti proprietà:
           <ul>
@@ -139,9 +140,8 @@
           </ul>
           <p class="mbr-text mbr-fonts-style display-7">
           Qual è la probabilità che un cliente ha almeno una delle 2 carte?
+          
           $$P(A) = 0.22, P(B) = 0.58 P(A \cup B) = P(A) + P(B) − P(A \cap B) = 0.22 + 0.58 − 0.14 = 0.66$$
-
-
           </p>
         </div>
       </div>
@@ -155,8 +155,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
-          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_00_caos_stocastico.html">&lt; Previous</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_01_01_probabilità_condizionata.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
