--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -137,7 +137,7 @@
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_01_01_probabilità_condizionata.html" target="_blank"><b>02.01.01. Probabilità Condizionata</b></a></li>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_01_02_indipendenza.html" target="_blank"><b>02.01.02. Indipendenza</b></a></li>
               </ul>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_02_00_variabili_aleatorie.html" target="_blank"><b>02.02. Distribuzioni di Probabilità e Processi Stocastici</b></a></li>
+              <li><a href="" target="_blank"><b>02.02. Distribuzioni di Probabilità e Processi Stocastici</b></a></li>
               <ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_02_01_variabili_aleatorie.html" target="_blank"><b>02.02.01. Variabili Aleatorie</b></a></li>
                 <ul>
