--- a/pages/learn/caos/02_02_01_variabili_aleatorie.html
+++ b/pages/learn/caos/02_02_01_variabili_aleatorie.html
@@ -129,8 +129,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
-          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_01_02_indipendenza.html">&lt; Previous</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_02_01_01_densità_di_probabilità.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
