--- a/pages/learn/caos/02_02_01_00_variabili_aleatorie.html
+++ b/pages/learn/caos/02_02_01_00_variabili_aleatorie.html
@@ -113,7 +113,7 @@
             <br>
             Ad ogni valore della variabile aleatoria è associata una probabilità di verificarsi, desunta dalla frequenza f con la quale si presenta un determinato valore rispetto all’insieme dei valori possibili.
 
-            $$f = \frac {\text numero casi favorevoli}{\text numero casi possibili}$$
+            $$f = \frac {\text (numero casi favorevoli)}{\text (numero casi possibili)}$$
 
             Quando il numero dei lanci è grandissimo (legge dei grandi numeri) la frequenza tende alla probabilità.
             <br>
