--- a/pages/learn/caos/02_02_01_01_densità_di_probabilità.html
+++ b/pages/learn/caos/02_02_01_01_densità_di_probabilità.html
@@ -131,7 +131,8 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/31.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 31</b></p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 31 <br>
+              In ascisse il valore della variabile aleatoria x </b></p>
           </div>
         </div>
       </div>
