--- a/pages/learn/caos/02_02_01_02_valor_medio_o_atteso.html
+++ b/pages/learn/caos/02_02_01_02_valor_medio_o_atteso.html
@@ -44,6 +44,9 @@
   <link rel="preload" as="style" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css" type="text/css">
 
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
   <!-- include internals -->
   <script>
     function includeHTML() {
@@ -113,9 +116,9 @@
             <br>
             Definita X una variabile aleatoria:
 
+            $$ E(x) = \displaystyle\sum_{i=1}^{\infty} x_i p_i$$
 
-            $$ E(x) =\displaystyle\sum_{i=1}^{\infty} x_i p_i$$
-
+$$ E(x) = \int_-\infty^\infty \mathrm{x}f(x)\,\mathrm{d}x$$
           </p>
         </div>
       </div>
