--- a/pages/learn/caos/02_02_01_02_valor_medio_o_atteso.html
+++ b/pages/learn/caos/02_02_01_02_valor_medio_o_atteso.html
@@ -115,10 +115,14 @@
             <br>
             <br>
             Definita X una variabile aleatoria:
+            <br>
+            Nel caso di variabile casuale discreta che ammette funzione di probabilità \(p_1\) è definita come:
 
             $$ E(x) = \displaystyle\sum_{i=1}^{\infty} x_i p_i$$
+            <br>
+            Nel caso di variabile casuale continua che ammette funzione di densità di probabilità \(f(x)\) la definizione diventa:
 
-$$ E(x) = \int_-\infty^\infty \mathrm{x}f(x)\,\mathrm{d}x$$
+            $$ E(x) = \int_-\infty^\infty \mathrm{x}f(x)\,\mathrm{d}x$$
           </p>
         </div>
       </div>
