--- a/pages/learn/caos/02_02_01_02_valor_medio_o_atteso.html
+++ b/pages/learn/caos/02_02_01_02_valor_medio_o_atteso.html
@@ -122,7 +122,7 @@
             <br>
             Nel caso di variabile casuale continua che ammette funzione di densità di probabilità \(f(x)\) la definizione diventa:
 
-            $$ E(X) = \int_-\infty^\infty \mathrm{x}f(x)\,\mathrm{d}x$$
+            $$ E(X) = \int_{-\infty}^{\infty} \mathrm{x}f(x)\,\mathrm{d}x$$
           </p>
         </div>
       </div>
