--- a/pages/learn/caos/02_03_spettro_della_densità_di_probabilità.html
+++ b/pages/learn/caos/02_03_spettro_della_densità_di_probabilità.html
@@ -89,14 +89,20 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
+                    La densità spettrale “cattura” il contenuto frequenziale di un processo stocastico e aiuta
+                    ad identificare le periodicità insite nel processo stocastico.
+                    Sostanzialmente è una trasformata di Fourier da applicarsi ad un segnale aleatorio.
+                    Nel caso in cui non ci siano periodicità insite nell’insieme di valori che assume la
+                    variabile casuale (il che significa che gli eventi sono tutti equiprobabili), lo spettro
+                    presenterà le stesse frequenze di occorrenza per ogni valore, quindi il grafico avrà il
+                    seguente profilo.
 
+                    Tale profilo può essere pensato come una funzione \(\frac{1}{(freq)^0}\)
                   </p>
                 </div>
             </div>
