--- a/pages/learn/caos/02_03_spettro_della_densità_di_probabilità.html
+++ b/pages/learn/caos/02_03_spettro_della_densità_di_probabilità.html
@@ -94,22 +94,37 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    La densità spettrale “cattura” il contenuto frequenziale di un processo stocastico e aiuta
-                    ad identificare le periodicità insite nel processo stocastico.
+                    La densità spettrale “cattura” il contenuto frequenziale di un processo stocastico e aiuta ad identificare le periodicità insite nel processo stocastico.
+                    <br>
+                    <br>
                     Sostanzialmente è una trasformata di Fourier da applicarsi ad un segnale aleatorio.
-                    Nel caso in cui non ci siano periodicità insite nell’insieme di valori che assume la
-                    variabile casuale (il che significa che gli eventi sono tutti equiprobabili), lo spettro
-                    presenterà le stesse frequenze di occorrenza per ogni valore, quindi il grafico avrà il
-                    seguente profilo.
-
-                    Tale profilo può essere pensato come una funzione \(\frac{1}{(freq)^0}\)
+                    <br>
+                    <br>
+                    Nel caso in cui non ci siano periodicità insite nell’insieme di valori che assume la variabile casuale (il che significa che gli eventi sono tutti equiprobabili),
+                    lo spettro presenterà le stesse frequenze di occorrenza per ogni valore, quindi il grafico avrà il seguente profilo.
+                    <br>
+                    <br>
+                    Tale profilo può essere pensato come una funzione \(\frac{1}{(freq)^0}\).
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
-
+    <!-- Image-->
+    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-5">
+            <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/caos/32.webp" alt="www.gabrielavelitch.com">
+              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 32 <br>
+                In ascisse la frequenza di occorrenza degli eventi</b></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
