--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -147,13 +147,13 @@
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_03_spettro_della_densità_di_probabilità.html" target="_blank"><b>02.03. Spettro della Densità di Probabilità</b></a></li>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_04_distribuzione_uniforme.html" target="_blank"><b>02.04. Distribuzione Uniforme</b></a></li>
                 <ul>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_04_01_densità_di_probabilità.html" target="_blank"><b>02.04.01. Esempi di Distribuzione Uniforme in CSound e Max</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_04_01_esempi_di_distribuzione_uniforme_in_csound_e_max.html" target="_blank"><b>02.04.01. Esempi di Distribuzione Uniforme in CSound e Max</b></a></li>
                 </ul>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.05. Distribuzione Lineare</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_06_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Triangolare</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_07_densità_di_probabilità.html" target="_blank"><b>02.07. Distribuzione Esponenziale</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_08_densità_di_probabilità.html" target="_blank"><b>02.08. Distribuzione di Poisson</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_09_densità_di_probabilità.html" target="_blank"><b>02.09. Distribuzione Gaussiana</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_distribuzione.html" target="_blank"><b>02.05. Distribuzione Lineare</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_06_distribuzione_triangolare.html" target="_blank"><b>02.06. Distribuzione Triangolare</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_07_distribuzione_esponenziale.html" target="_blank"><b>02.07. Distribuzione Esponenziale</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_08_distribuzione_di_poisson.html" target="_blank"><b>02.08. Distribuzione di Poisson</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_09_distribuzione_gaussiana.html" target="_blank"><b>02.09. Distribuzione Gaussiana</b></a></li>
 
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Mapping</b></a></li>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Autocorrelazione</b></a></li>
