--- a/pages/learn/caos/02_04_distribuzione_uniforme.html
+++ b/pages/learn/caos/02_04_distribuzione_uniforme.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Spettro della Densità di Probabilità</title>
+  <title>Distribuzione Uniforme</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -81,7 +81,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Caos</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Spettro della Densità di Probabilità</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Distribuzione Uniforme</strong></h4>
             </div>
         </div>
     </div>
@@ -89,50 +89,29 @@
 
 
   <!-- Text-->
+
+
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    La densità spettrale “cattura” il contenuto frequenziale di un processo stocastico e aiuta ad identificare le periodicità insite nel processo stocastico.
-                    <br>
-                    <br>
-                    Sostanzialmente è una trasformata di Fourier da applicarsi ad un segnale aleatorio.
-                    <br>
-                    <br>
-                    Nel caso in cui non ci siano periodicità insite nell’insieme di valori che assume la variabile casuale (il che significa che gli eventi sono tutti equiprobabili),
-                    lo spettro presenterà le stesse frequenze di occorrenza per ogni valore, quindi il grafico avrà il seguente profilo.
-                    <br>
-                    <br>
-                    Tale profilo può essere pensato come una funzione \(\frac{1}{(freq)^0}\).
+
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Image-->
-    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-      <div class="container-fluid">
-        <div class="row justify-content-center">
-          <div class="col-12 col-lg-5">
-            <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/caos/32.webp" alt="www.gabrielavelitch.com">
-              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 32 <br>
-                In ascisse la frequenza di occorrenza degli eventi</b></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_02_01_02_valor_medio_o_atteso.html">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_04_distribuzione_uniforme.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
