--- a/pages/learn/caos/02_04_distribuzione_uniforme.html
+++ b/pages/learn/caos/02_04_distribuzione_uniforme.html
@@ -89,14 +89,25 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
+                    Gli eventi hanno tutti la stessa probabilità di occorrenza.
+                    <br>
+                    <br>
+                    Esempio dato non truccato: probabilità di occorrenza del singolo evento =1/6
+                    <br>
+                    <br>
+                    In questo caso si ha una distribuzione discreta poiché la variabile aleatoria può assumere soltanto valori interi da 1 a 6.
+                    <br>
+                    <br>
+                    La somma delle probabilità dovrà essere pari ad 1 (evento certo).
 
+                    $$\displaystyle\sum_{i=1}^{6} p_i = \frac{1}{6} + \frac{1}{6} + \frac{1}{6} + \frac{1}{6} + \frac{1}{6} + \frac{1}{6} = 1$$
+
+                    Il valor medio è
                   </p>
                 </div>
             </div>
@@ -110,8 +121,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_03_spettro_della_densità_di_probabilità.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_04_01_esempi_di_distribuzione_uniforme_in_csound_e_max.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
