--- a/pages/learn/caos/02_04_distribuzione_uniforme.html
+++ b/pages/learn/caos/02_04_distribuzione_uniforme.html
@@ -107,7 +107,7 @@
 
                     $$\displaystyle\sum_{i=1}^{6} p_i = \frac{1}{6} + \frac{1}{6} + \frac{1}{6} + \frac{1}{6} + \frac{1}{6} + \frac{1}{6} = 1$$
 
-                    Il valor medio è\(E(x) = \displaystyle\sum_{i=1}^{6} x_i p_i\)
+                    Il valor medio è\(E(x) = \displaystyle\sum_{i=1}^{6} x_i p_i = 1 \cdot \frac{1}{6} + 2 \cdot \frac{1}{6} + 3 \cdot \frac{1}{6} + 4 \cdot \frac{1}{6} + 5\cdot \frac{1}{6} + 6 \cdot \frac{1}{6} = \frac{21}{6} = 3.5\)
                   </p>
                 </div>
             </div>
