--- a/pages/learn/caos/02_04_distribuzione_uniforme.html
+++ b/pages/learn/caos/02_04_distribuzione_uniforme.html
@@ -108,13 +108,29 @@
                     $$\displaystyle\sum_{i=1}^{6} p_i = \frac{1}{6} + \frac{1}{6} + \frac{1}{6} + \frac{1}{6} + \frac{1}{6} + \frac{1}{6} = 1$$
 
                     Il valor medio è\(E(x) = \displaystyle\sum_{i=1}^{6} x_i p_i = 1 \cdot \frac{1}{6} + 2 \cdot \frac{1}{6} + 3 \cdot \frac{1}{6} + 4 \cdot \frac{1}{6} + 5\cdot \frac{1}{6} + 6 \cdot \frac{1}{6} = \frac{21}{6} = 3.5\)
+                    <br>
+                    <br>
+                    Nel caso di una variabile aleatoria continua la distribuzione uniforme è rappresentata dal seguente grafico.
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
-
+    <!-- Image-->
+    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-5">
+            <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/caos/31.webp" alt="www.gabrielavelitch.com">
+              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 31 <br>
+                </b></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
