--- a/pages/learn/caos/02_04_distribuzione_uniforme.html
+++ b/pages/learn/caos/02_04_distribuzione_uniforme.html
@@ -132,6 +132,21 @@
       </div>
     </section>
 
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      L’area totale vale 1. La probabilità che la variabile assuma un valore tra 0.2 e 0.4 è pari all’area delimitata dalla base pari all’intervallo (0.4 - 0.2 = 0.2) e l’altezza pari a f(x) = 1 cioè
+
+                      $$pb_{(0.2 < x < 0.4)} = $$
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
+
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
