--- a/pages/learn/caos/02_04_distribuzione_uniforme.html
+++ b/pages/learn/caos/02_04_distribuzione_uniforme.html
@@ -107,7 +107,7 @@
 
                     $$\displaystyle\sum_{i=1}^{6} p_i = \frac{1}{6} + \frac{1}{6} + \frac{1}{6} + \frac{1}{6} + \frac{1}{6} + \frac{1}{6} = 1$$
 
-                    Il valor medio è\(E(x) = \displaystyle\sum_{i=1}^{6} x_i p_i = 1 \cdot \frac{1}{6} + 2 \cdot \frac{1}{6} + 3 \cdot \frac{1}{6} + 4 \cdot \frac{1}{6} + 5\cdot \frac{1}{6} + 6 \cdot \frac{1}{6} = \frac{21}{6} = 3.5\)
+                    Il valor medio è \(E(x) = \displaystyle\sum_{i=1}^{6} x_i p_i = 1 \cdot \frac{1}{6} + 2 \cdot \frac{1}{6} + 3 \cdot \frac{1}{6} + 4 \cdot \frac{1}{6} + 5\cdot \frac{1}{6} + 6 \cdot \frac{1}{6} = \frac{21}{6} = 3.5\)
                     <br>
                     <br>
                     Nel caso di una variabile aleatoria continua la distribuzione uniforme è rappresentata dal seguente grafico.
@@ -141,6 +141,10 @@
                       L’area totale vale 1. La probabilità che la variabile assuma un valore tra 0.2 e 0.4 è pari all’area delimitata dalla base pari all’intervallo (0.4 - 0.2 = 0.2) e l’altezza pari a f(x) = 1 cioè
 
                       $$pb_{(0.2 < x < 0.4)} = f(x) \cdot dx = 1 \cdot (0.4 - 0.2) = 0.2 = 20%$$
+
+                      Il valor medio di una distribuzione uniforme che assume valori da 0 ad 1 è pari a 0.5
+
+                      $$E(x) = \int\limits_{-\infty}^{\infty} x \cdot f(x) \cdot dx = = \left.\frac{x^2}{2}\right|_0^1 = \frac{1}{2} = 0.5$$
                     </p>
                   </div>
               </div>
