--- a/pages/learn/caos/02_04_distribuzione_uniforme.html
+++ b/pages/learn/caos/02_04_distribuzione_uniforme.html
@@ -144,7 +144,7 @@
 
                       Il valor medio di una distribuzione uniforme che assume valori da 0 ad 1 è pari a 0.5
 
-                      $$E(x) = \int\limits_{-\infty}^{\infty} x \cdot f(x) \cdot dx = = \left.\frac{x^2}{2}\right|_0^1 = \frac{1}{2} = 0.5$$
+                      $$E(x) = \int\limits_{-\infty}^{\infty} x \cdot f(x) \cdot dx = \int\limits_{0}^{1} x \cdot 1 \cdot dx = \left.\frac{x^2}{2}\right|_0^1 = \frac{1}{2} = 0.5$$
                     </p>
                   </div>
               </div>
