--- a/pages/learn/caos/02_04_distribuzione_uniforme.html
+++ b/pages/learn/caos/02_04_distribuzione_uniforme.html
@@ -140,7 +140,7 @@
                     <p class="mbr-text mbr-fonts-style display-7">
                       L’area totale vale 1. La probabilità che la variabile assuma un valore tra 0.2 e 0.4 è pari all’area delimitata dalla base pari all’intervallo (0.4 - 0.2 = 0.2) e l’altezza pari a f(x) = 1 cioè
 
-                      $$pb_{(0.2 < x < 0.4)} = f(x) \cdot dx = 1 \cdot (0.4 - 0.2) = 0.2 = 20%$$
+                      $$pb_{(0.2 < x < 0.4)} = f(x) \cdot dx = 1 \cdot (0.4 - 0.2) = 0.2 = 20\%$$
 
                       Il valor medio di una distribuzione uniforme che assume valori da 0 ad 1 è pari a 0.5
 
