--- a/pages/learn/caos/02_06_distribuzione_triangolare.html
+++ b/pages/learn/caos/02_06_distribuzione_triangolare.html
@@ -23,7 +23,7 @@
   <meta name="description" content="">
 
 
-  <title>Distribuzione Lineare</title>
+  <title>Distribuzione Triangolare</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -94,7 +94,7 @@
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
           <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Caos</h3>
-          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Distribuzione Lineare</strong></h4>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Distribuzione Triangolare</strong></h4>
         </div>
       </div>
     </div>
@@ -112,7 +112,8 @@
             $$
             f(x) =
             \begin{cases}
-            2(1 - x) & \quad 0 \leq x \leq 1\\
+            4x & \quad 0 \leq x \leq 0.5\\
+            (4 - 4x) & \quad 0.5 \leq x \leq 1\\
             0 & \quad \text{altrove}
             \end{cases}
             $$
@@ -122,52 +123,6 @@
     </div>
   </section>
 
-  <!-- Image-->
-  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col-12 col-lg-5">
-          <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/caos/33.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 33 <br> </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-12 col-lg-8">
-          <p class="mbr-text mbr-fonts-style display-7">
-            L’algoritmo che genera tale distribuzione è dato utilizzando due distribuzioni uniformi e prendendo come valore il più piccolo tra le due distribuzioni ad ogni generazione di numero casuale.
-            <br>
-            <br>
-            Un questo caso la probabilità di avere un valore della x tra 0.0 e 0.2 è maggiore della probabilità che la variabile aleatoria x presenti un valore tra 0.8 ed 1, poiché le aree sono differenti.
-            <br>
-            <br>
-            L’area complessiva anche in questo caso è pari ad 1. Valor medio ≈ 0.33
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Image-->
-  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col-12 col-lg-5">
-          <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/caos/34.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 34 <br> </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
 
   <!-- Prev/Next-->
@@ -175,8 +130,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
-          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_04_distribuzione_uniforme.html">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_06_distribuzione_triangolare.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
