--- a/pages/learn/caos/02_06_distribuzione_triangolare.html
+++ b/pages/learn/caos/02_06_distribuzione_triangolare.html
@@ -123,15 +123,56 @@
     </div>
   </section>
 
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/35.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 35 <br> </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            L’algoritmo che genera tale distribuzione è dato utilizzando due distribuzioni uniformi e prendendo come valore la media tra le due distribuzioni ad ogni generazione di numero casuale.
+            <br>
+            <br>
+            Il valor medio è pari a 0.5. L’area della f(x) tra 0 ed 1 è pari ad 1.
+            <br>
+          </p>
+          <h3>Algoritmo in CSound</h3>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Si utilizza nello score la media tra i numeri generati dal random:
+          <ul>
+            <li>con un valor medio pari a 0.5;  [(~*1 + ~*1)*(0.5)] </li>
+            <li>(con un valor medio pari a k/2;  [(~*k + ~*k)*(0.5)]</li>
+          </ul>
+          <p class="mbr-text mbr-fonts-style display-7">
+          <h3>Algoritmo in MaxMSP</h3>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Basta semplicemente sommare due generatori random e moltiplicare il risultato per 0.5.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
-          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_distribuzione_lineare.html">&lt; Previous</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_07_distribuzione_esponenziale.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
