--- a/pages/learn/caos/02_07_distribuzione_esponenziale.html
+++ b/pages/learn/caos/02_07_distribuzione_esponenziale.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>test</title>
+  <title>Distribuzione Esponenziale</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -81,7 +81,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Caos</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>test</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Distribuzione Esponenziale</strong></h4>
             </div>
         </div>
     </div>
@@ -89,14 +89,15 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    La distribuzione descrive fenomeni per cui la variabile casuale x ha maggiore probabilità di assumere valori vicini allo zero.
+                    <br>
+                    <br>
+                    La funzione di densità di probabilità è data da: f(x) = \lambda e^{\lambda x} ; x > 0
                   </p>
                 </div>
             </div>
