--- a/pages/learn/caos/02_07_distribuzione_esponenziale.html
+++ b/pages/learn/caos/02_07_distribuzione_esponenziale.html
@@ -97,7 +97,10 @@
                     La distribuzione descrive fenomeni per cui la variabile casuale x ha maggiore probabilità di assumere valori vicini allo zero.
                     <br>
                     <br>
-                    La funzione di densità di probabilità è data da: f(x) = \lambda e^{\lambda x} ; x > 0
+                    La funzione di densità di probabilità è data da: \(f(x) = \lambda e^{\lambda x} ; x > 0\)
+                    <br>
+                    <br>
+                    \(\lambda\) controlla la dilatazione orizzontale della funzione. Se \(\lambda\) ha un valore grande, aumenta la pb di generare numeri piccoli.
                   </p>
                 </div>
             </div>
