--- a/pages/learn/caos/02_06_distribuzione_triangolare.html
+++ b/pages/learn/caos/02_06_distribuzione_triangolare.html
@@ -154,7 +154,7 @@
             Si utilizza nello score la media tra i numeri generati dal random:
           <ul>
             <li>con un valor medio pari a 0.5;  [(~*1 + ~*1)*(0.5)] </li>
-            <li>(con un valor medio pari a k/2;  [(~*k + ~*k)*(0.5)]</li>
+            <li>con un valor medio pari a k/2;  [(~*k + ~*k)*(0.5)]</li>
           </ul>
           <p class="mbr-text mbr-fonts-style display-7">
           <h3>Algoritmo in MaxMSP</h3>
