--- a/pages/learn/caos/02_07_distribuzione_esponenziale.html
+++ b/pages/learn/caos/02_07_distribuzione_esponenziale.html
@@ -127,7 +127,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-8">
                     <p class="mbr-text mbr-fonts-style display-7">
-                      Il valor medio è pari a \(0.69315 / \lambda\). 
+                      Il valor medio è pari a \(0.69315 / \lambda\).
                       Molti fenomeni naturali seguono l’andamento esponenziale, come ad esempio le piccole scosse di terremoto che sono molto più comuni delle grandi scosse,
                       oppure i piccoli salti di altezza musicale, più comuni dei grandi salti.
                     </p>
@@ -155,8 +155,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_06_distribuzione_triangolare.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_08_distribuzione_di_poisson.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
