--- a/pages/learn/caos/02_08_distribuzione_di_poisson.html
+++ b/pages/learn/caos/02_08_distribuzione_di_poisson.html
@@ -94,7 +94,45 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
+                    La distribuzione descrive fenomeni per cui la variabile casuale  \(\x\) assume valori interi maggiori o uguali a zero.
+                    La funzione non ha limite superiore e la distribuzione è controllata dal parametro \(\lambda\).
 
+                    La probabilità di avere l’intero \(\k\) è data da: \(p {x = k} = e^(-\lambda) \frac{\lambda^k}{k!} \; x > 0\)
+
+                    Il valor medio della distribuzione è \(\lambda\);
+\(\lambda\) indica il numero di eventi che mediamente in successione e in un dato intervallo di tempo si verificano.
+ \(\k\) indica il numero di eventi per un dato intervallo di tempo del quale si vuole
+conoscere la probabilità che si verifichino.
+
+\(\lambda\) è uguale al numero aspettato delle occorrenze che accadono durante un
+intervallo di tempo dato. Ad esempio se l’evento o il gruppo di eventi accade ogni 5
+minuti, per conoscere quanti eventi accadono in un intervallo di 20 minuti, basta:
+• trovare il valore di \(\lambda\); in questo caso  \(\lambda = 20/5 = 4\).
+• verificare sulla distribuzione di Poisson per \(\lambda = 4\) quant’è la probabilità di avere k
+eventi o k gruppi di eventi
+
+
+
+La distribuzione di Poisson è legata al processo di Poisson. Si applica a vari fenomeni di natura
+discreta (ovvero quelli che possono accadere 0,1,2,3,… volte durante un periodo di tempo o in
+una data area) ma con il vincolo che la probabilità rimanga costante nel tempo (o nello spazio in
+caso di area).
+Esempi di eventi che seguono il modello di Poisson sono:
+• Il numero di automobili che passano su una strada in un punto sufficientemente lontano da
+semafori
+• Il numero di errori di ortografia che vengono commessi nella battitura di una pagina
+• Il numero delle chiamate telefoniche ad un call center per minuto
+• Il numero di volte a cui un server web viene richiesto l’accesso a ogni minuto
+• Il numero di animali uccisi da automobilisti trovati sulla strada (per unità di lunghezza)
+• Il numero di mutazioni di una porzione di DNA dopo una quantità definita di radiazioni
+• Il numero di nuclei instabili che decadono un un determinato tempo in un materiale radioattivo.
+(Poiché la sostanza radioattiva decade con il tempo, l’intervallo di tempo utilizzato nel modello
+dovrà essere molto minore del tempo di vita medio della sostanza radioattiva).
+• Il numero degli alberi di pino per unità d’area in una foresta mista
+• Il numero di stelle in un volume dato di spazio
+• La distribuzione dei recettori della retina nell’occhio
+• Il numero di virus che possono infettare una cella in una coltura batterica
+• Clienti in arrivo in negozio in un certo tempo. (per lo studio delle risorse)
                   </p>
                 </div>
             </div>
