--- a/pages/learn/caos/02_08_distribuzione_di_poisson.html
+++ b/pages/learn/caos/02_08_distribuzione_di_poisson.html
@@ -129,7 +129,40 @@
             <li>trovare il valore di \(\lambda\); in questo caso \(\lambda = 20/5 = 4\).</li>
             <li>verificare sulla distribuzione di Poisson per \(\lambda = 4\) quant’è la probabilità di avere \(\k\) eventi o \(\k\) gruppi di eventi.</li>
           </ul>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/38.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 38 <br> </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
+            Nell'immagine fig.38 consideriamo \(\lambda = 4\); 
+            supponiamo inoltre che in 5 minuti accadono 10 eventi;
+            se desideriamo sapere la probabilità di avere \(\k \cdot 10\) eventi in 20 minuti basta osservare il grafico sulla sinistra.
+            (\(\k\) è indicato in ascisse e rappresenta il gruppo di eventi o l’evento).
+            Avrò quindi la probabilità del 20% (0.2) di avere \(\3 \cdot 10 = 30\) eventi o \(\4 \cdot 10 = 40\) eventi in 20 minuti.
+            Ci sarà invece la probabilità del 7% (0.07) di avere \(\1 \cdot 10\) eventi.
+            <br>
+            <br>
             La distribuzione di Poisson è legata al processo di Poisson.
             Si applica a vari fenomeni di natura discreta (ovvero quelli che possono accadere 0,1,2,3,… volte durante un periodo di tempo o in una data area) ma con il vincolo che la probabilità rimanga costante nel tempo (o nello spazio in caso di
             area).
@@ -154,8 +187,6 @@
       </div>
     </div>
   </section>
-
-
 
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
