--- a/pages/learn/caos/02_08_distribuzione_di_poisson.html
+++ b/pages/learn/caos/02_08_distribuzione_di_poisson.html
@@ -107,11 +107,11 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            La distribuzione descrive fenomeni per cui la variabile casuale \(\x\) assume valori interi maggiori o uguali a zero.
+            La distribuzione descrive fenomeni per cui la variabile casuale \(x\) assume valori interi maggiori o uguali a zero.
             La funzione non ha limite superiore e la distribuzione è controllata dal parametro \(\lambda\).
             <br>
             <br>
-            La probabilità di avere l’intero \(\k\) è data da: \(p {x = k} = e^(-\lambda) \frac{\lambda^k}{k!} \; x > 0\)
+            La probabilità di avere l’intero \(k\) è data da: \(p {x = k} = e^(-\lambda) \frac{\lambda^k}{k!} \; x > 0\)
             <br>
             <br>
             Il valor medio della distribuzione è \(\lambda\).
@@ -120,14 +120,14 @@
             \(\lambda\) indica il numero di eventi che mediamente in successione e in un dato intervallo di tempo si verificano.
             <br>
             <br>
-            \(\k\) indica il numero di eventi per un dato intervallo di tempo del quale si vuole conoscere la probabilità che si verifichino.
+            \(k\) indica il numero di eventi per un dato intervallo di tempo del quale si vuole conoscere la probabilità che si verifichino.
             <br>
             <br>
             \(\lambda\) è uguale al numero aspettato delle occorrenze che accadono durante un intervallo di tempo dato.
             Ad esempio se l’evento o il gruppo di eventi accade ogni 5 minuti, per conoscere quanti eventi accadono in un intervallo di 20 minuti, basta:
           <ul>
             <li>trovare il valore di \(\lambda\); in questo caso \(\lambda = 20/5 = 4\).</li>
-            <li>verificare sulla distribuzione di Poisson per \(\lambda = 4\) quant’è la probabilità di avere \(\k\) eventi o \(\k\) gruppi di eventi.</li>
+            <li>verificare sulla distribuzione di Poisson per \(\lambda = 4\) quant’è la probabilità di avere \(k\) eventi o \(k\) gruppi di eventi.</li>
           </ul>
           </p>
         </div>
@@ -155,10 +155,10 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Nell'immagine fig.38 consideriamo \(\lambda = 4\); 
+            Nell'immagine fig.38 consideriamo \(\lambda = 4\);
             supponiamo inoltre che in 5 minuti accadono 10 eventi;
-            se desideriamo sapere la probabilità di avere \(\k \cdot 10\) eventi in 20 minuti basta osservare il grafico sulla sinistra.
-            (\(\k\) è indicato in ascisse e rappresenta il gruppo di eventi o l’evento).
+            se desideriamo sapere la probabilità di avere \(k \cdot 10\) eventi in 20 minuti basta osservare il grafico sulla sinistra.
+            (\(k\) è indicato in ascisse e rappresenta il gruppo di eventi o l’evento).
             Avrò quindi la probabilità del 20% (0.2) di avere \(\3 \cdot 10 = 30\) eventi o \(\4 \cdot 10 = 40\) eventi in 20 minuti.
             Ci sarà invece la probabilità del 7% (0.07) di avere \(\1 \cdot 10\) eventi.
             <br>
